--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div id="main">
 			<div id="page1">
 				<div id="nav">
-                    <h1>DIXIPLE</h1>
+                    <h1 id="dix">DIXIPLE</h1>
                     <div id="navright">
                         <h2>Join</h2>
                         <i class="ri-add-line"></i>
@@ -24,6 +24,7 @@
                     <h1>Designers</h1>
                     <h1>Gallery</h1>
                     <h1>More</h1>
+                    <i id="cls" class="ri-close-circle-fill"></i>
                 </div>
 
                 <div id="navbottom">
@@ -44,13 +45,21 @@
                     <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui adipisci impedit tempore?</h3>
                 </div>
                 <div class="project">
-                    <div class="slide"><img src="https://images.unsplash.com/photo-1665310127352-a7be56238f6a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80" alt="">
+                    <div class="slide">
+                        <img src="https://images.unsplash.com/photo-1665310127352-a7be56238f6a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80" alt="">
+                        <img src="https://images.unsplash.com/photo-1665320976963-dbde92d362cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2944&q=80" alt=""> 
                     </div>
-                    <div class="slide"><img src="https://images.unsplash.com/photo-1664574654578-d5a6a4f447bb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="">
+                    <div class="slide">
+                        <img src="https://images.unsplash.com/photo-1664574654578-d5a6a4f447bb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="">
+                        <img src="https://images.unsplash.com/photo-1665048110211-91d0b74c421c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="">
                     </div>
-                    <div class="slide"><img src="https://images.unsplash.com/photo-1665048110211-91d0b74c421c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="">
+                    <div class="slide">
+                        <img src="https://images.unsplash.com/photo-1665048110211-91d0b74c421c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="">
+                        <img src="https://images.unsplash.com/photo-1665320976963-dbde92d362cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2944&q=80" alt="">
                     </div>
-                    <div class="slide"><img src="https://images.unsplash.com/photo-1665320976963-dbde92d362cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2944&q=80" alt="">
+                    <div class="slide">
+                        <img src="https://images.unsplash.com/photo-1665320976963-dbde92d362cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2944&q=80" alt="">
+                        <img src="https://images.unsplash.com/photo-1665310127352-a7be56238f6a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80" alt="">
                     </div>
                 </div>
 
